# 3d-face-reconstruction

./: .gitignore  3d-face-reconstruction.sln  3d-face-reconstruction.vcxproj  BMP.h  CMakeLists.txt  CoarseAlignment.cpp  CoarseAlignment.h  FaceModel.cpp  FaceModel.h  FeaturePointExtractor.h  Mesh.h  OpenNI2Sensor.cpp  OpenNI2Sensor.h  Optimizer.cpp  Optimizer.h  OptimizerInit.cpp  OptimizerInit.h  ProcrustesAligner.cpp  ProcrustesAligner.h  README.md  Rasterizer.cpp  Rasterizer.h  Sensor.h  Settings.h  SwitchControl.cpp  SwitchControl.h  VirtualSensor.h  Visualizer.cpp  Visualizer.h  main.cpp  stdafx.h  utils.cpp  utils.h
data/MorphableModel/: averageMesh_features.points
data/team_members/: louise.points  lukas.points  peter.points  urs.points
